# riddle-me-a-model

./: .gitignore  pyproject.toml
src/: constants.py  grpo_trainer.py  process_data.py  reward_functions.py
