[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riddle-me-a-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trl<=0.15.2",
]

[project.optional-dependencies]
gpu = [
    "unsloth==2025.5.7",
]
