[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riddle-me-a-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "flashinfer-python>=0.2.5",
    "scikit-learn>=1.6.1",
    "trl<=0.15.2",
    "vllm==0.8.5.post1",
]

[project.optional-dependencies]
gpu = [
    "unsloth==2025.5.7",
]
